ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: default
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - chatserver.com
    secretName: chatserver-tls
  rules:
  - host: chatserver.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask-service
              port:
                number: 5000
